--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@ permalink: /
     </head>
     <body>
         <div class="content">
-            {% if site.front_img %}
-            <img src="{{ site.front_img_path }}" id="fullscreen">
-            {% endif %}
+            <!-- {% if site.front_img %} -->
+            <!-- <img src="{{ site.front_img_path }}" id="fullscreen"> -->
+            <!-- {% endif %} -->
+
+            <img src="imgs/ihealthcarelabs.jpeg" id="fullscreen">
 
             {% if site.avatar %}
                 <img src="{{ site.avatar_img_path }}" id="avatar">
