--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ permalink: /
                 <img src="{{ site.avatar_img_path }}" id="avatar">
             {% endif %}
 
-            <h1>{{ site.name }}</h1>
-            <h3>{{ site.description }}</h3>
+            <h1>Welcom to iHealthCareLabs</h1>
+            <h3></h3>
 
                 <ul>
                     {% if site.github_username %}
