--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
----
+<!-- ---
 permalink: /
----
+--- -->
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+        <!-- <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="{{ site.description }}">
         <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-        {% if site.favicon_img %}
-        <link rel="shortcut icon" href="{{ site.favicon_img_path }}" />
-        {% endif %}
+        <!-- {% if site.favicon_img %} -->
+        <!-- <link rel="shortcut icon" href="{{ site.favicon_img_path }}" /> -->
+        <!-- {% endif %} -->
+
         <link rel="stylesheet" href="{{ "/css/front.css" | prepend: site.baseurl }}">
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -25,31 +26,31 @@ permalink: /
 
             <img src="imgs/ihealthcarelabs.jpeg" id="fullscreen">
 
-            {% if site.avatar %}
-                <img src="{{ site.avatar_img_path }}" id="avatar">
-            {% endif %}
+            <!-- {% if site.avatar %} -->
+                <!-- <img src="{{ site.avatar_img_path }}" id="avatar"> -->
+            <!-- {% endif %} -->
 
             <h1>Welcom to iHealthCareLabs</h1>
             <h3></h3>
 
                 <ul>
-                    {% if site.github_username %}
-                    <li><a class="fa fa-2x fa-github" href="https://github.com/{{ site.github_username }}"><span class="description">GitHub</span></a></li>
-                    {% endif %}
+                    <!-- {% if site.github_username %} -->
+                    <!-- <li><a class="fa fa-2x fa-github" href="https://github.com/{{ site.github_username }}"><span class="description">GitHub</span></a></li> -->
+                    <!-- {% endif %} -->
 
-                    {% if site.codepen_username %}
-                    <li><a class="fa fa-2x fa-codepen" href="https://codepen.io/{{ site.codepen_username }}"><span class="description">CodePen</span></a></li>
-                    {% endif %}
+                    <!-- {% if site.codepen_username %} -->
+                    <li><a class="fa fa-2x fa-codepen" href="https://codepen.io/here"><span class="description">CodePen</span></a></li>
+                    <!-- {% endif %} -->
 
-                    {% if site.facebook_username %}
-                    <li><a class="fa fa-2x fa-facebook" href="https://facebook.com/{{ site.facebook_username }}"><span class="description">Facebook</span></a></li>
-                    {% endif %}
+                    <!-- {% if site.facebook_username %} -->
+                    <li><a class="fa fa-2x fa-facebook" href="https://facebook.com/here"><span class="description">Facebook</span></a></li>
+                    <!-- {% endif %} -->
 
-                    {% if site.vk_username %}
-                    <li><a class="fa fa-2x fa-vk" href="https://vk.com/{{ site.vk_username }}"><span class="description">ВКонтакте</span></a></li>
-                    {% endif %}
+                    <!-- {% if site.vk_username %} -->
+                    <li><a class="fa fa-2x fa-vk" href="https://vk.com/here"><span class="description">ВКонтакте</span></a></li>
+                    <!-- {% endif %} -->
 
-                    {% if site.twitter_username %}
+                    <!-- {% if site.twitter_username %}
                     <li><a class="fa fa-2x fa-twitter" href="https://twitter.com/{{ site.twitter_username }}"><span class="description">Twitter</span></a></li>
                     {% endif %}
 
@@ -114,7 +115,7 @@ permalink: /
                     {% endif %}
 
                     {% if site.public_key_url %}
-                    <li><a class="fa fa-2x fa-key" href="{{ site.public_key_url }}"><span class="description">PGP Key</span></a></li>
+                    <li><a class="fa fa-2x fa-key" href="{{ site.public_key_url }}"><span class="description">PGP Key</span></a></li> -->
                     {% endif %}
                 </ul>
         </div>
