--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ permalink: /
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title> -->
+        <title>Welcome to iHealthCareLabs</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="{{ site.description }}">
         <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
@@ -14,7 +15,7 @@ permalink: /
         <!-- <link rel="shortcut icon" href="{{ site.favicon_img_path }}" /> -->
         <!-- {% endif %} -->
 
-        <link rel="stylesheet" href="{{ "/css/front.css" | prepend: site.baseurl }}">
+        <link rel="stylesheet" href="css/front.css">
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     </head>
@@ -116,7 +117,7 @@ permalink: /
 
                     {% if site.public_key_url %}
                     <li><a class="fa fa-2x fa-key" href="{{ site.public_key_url }}"><span class="description">PGP Key</span></a></li> -->
-                    {% endif %}
+                    <!-- {% endif %} -->
                 </ul>
         </div>
 
