Fix error in index.html FB link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Welcome to iHealthCareLabs</h1>
                 <ul>
                     <li><a class="fa fa-2x fa-github" href="https://github.com/ihealthcarelabs"><span class="description">GitHub</span></a></li>
-                    <li><a class="fa fa-2x fa-facebook" href="https://facebook.com/#}"><span class="description">Facebook</span></a></li>
+                    <li><a class="fa fa-2x fa-facebook" href="https://facebook.com/"><span class="description">Facebook</span></a></li>
                     <li><a class="fa fa-2x fa-twitter" href="https://twitter.com/#"><span class="description">Twitter</span></a></li>
                     <li><a class="fa fa-2x fa-tags" href="#"><span class="description">Blog</span></a></li>
                     <li><a class="fa fa-2x fa-envelope" href="#"><span class="description">Email</span></a></li>
